--- a/frontend/src/static/js/components/page-layout/PageHeader/PageHeader.scss
+++ b/frontend/src/static/js/components/page-layout/PageHeader/PageHeader.scss
@@ -246,6 +246,11 @@ a.user-menu-top-link {
   padding: 0;
   margin: 0;
 
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 2em;
+
   font-size: 1.25em;
   font-weight: 300;
 
