--- a/templates/config/installation/site.html
+++ b/templates/config/installation/site.html
@@ -11,12 +11,12 @@ MediaCMS.site = {
     },
     logo:{
     	lightMode:{
-            img: "/static/images/logo_dark.png",
-            svg: "/static/images/logo_dark.svg",
+            img: "/static/images/etv.png",
+            svg: "/static/images/etv.png",
     	},
     	darkMode:{
-            img: "/static/images/logo_light.png",
-            svg: "/static/images/logo_light.svg",
+            img: "/static/images/etv.png",
+            svg: "/static/images/etv.png",
     	},
     },
     pages: {
