--- a/frontend/src/static/js/components/page-layout/PageHeader/PageHeader.scss
+++ b/frontend/src/static/js/components/page-layout/PageHeader/PageHeader.scss
@@ -342,3 +342,33 @@ a.user-menu-top-link {
     padding-right: 4px;
   }
 }
+
+.wp-header {
+  display: flex;
+  gap: 8em;
+  padding: 1em;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.wp-nav {
+  font-family: "Fira Sans", sans-serif;
+  font-weight: 300;
+  font-size: 19.2px;
+  padding-right: 1.5em;
+
+  a {
+    color: rgb(17, 17, 17) !important;
+  }
+
+  ul {
+    display: flex;
+    flex-direction: row;
+    gap: 3em;
+
+    li {
+      text-decoration: none;
+      list-style: none;
+    }
+  }
+}
