--- a/frontend/src/static/js/components/page-layout/PageHeader/PageHeader.scss
+++ b/frontend/src/static/js/components/page-layout/PageHeader/PageHeader.scss
@@ -353,7 +353,7 @@ a.user-menu-top-link {
 
 .wp-nav {
   font-family: "Fira Sans", sans-serif;
-  /*font-weight: 300; */
+  font-weight: 300;
   font-size: 19.2px;
   padding-right: 1.5em;
 
