--- a/frontend/src/static/js/components/page-layout/PageHeader/PageHeader.scss
+++ b/frontend/src/static/js/components/page-layout/PageHeader/PageHeader.scss
@@ -352,10 +352,10 @@ a.user-menu-top-link {
 }
 
 .wp-nav {
+  padding-top: 0.5em;
   font-family: "Fira Sans", sans-serif;
   font-weight: 300;
   font-size: 19.2px;
-  padding-right: 1.5em;
 
   a {
     color: rgb(17, 17, 17) !important;
